# abbibench_toolkit

./: .gitignore  README.md  download_dataset.sh  pyproject.toml
src/abbibench_toolkit/config/: config.py
src/abbibench_toolkit/dataset/: dataset.py
src/abbibench_toolkit/model/: diffab.py  model.py  protein_mpnn.py
src/abbibench_toolkit/model/ProteinMPNN/: readme.md
src/abbibench_toolkit/model/diffab/: README.md  pyproject.toml
src/abbibench_toolkit/model/diffab/notebooks/scoring_outputs/: aayl49_ML_benchmarking_data_diffab_scores.csv
src/abbibench_toolkit/model/diffab/src/: diffab
src/abbibench_toolkit/scripts/: compute_corr.py  configs.py  download_dataset.py  inference.py
