[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "diffab"
version = "0.1.0"
description = "diffab reproduction"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
	"torch==2.2.0",
	"torchvision==0.17.0",
	"torchaudio==2.2.0",
	"tyro",
        "joblib",
	"lmdb",
	"tqdm",
	"easydict",
	"PyYAML",
	"tensorboard",
	"biopython==1.78",
	"abnumber@git+https://github.com/prihoda/AbNumber@v0.3.0",
	"pdbfixer@git+https://github.com/openmm/pdbfixer",
        "numpy<2",
]

[project.optional-dependencies]
dev = [
    "black",
  "pytest>=8",
  "pytest-cov>=5",
  "coverage[toml]>=7",
  "mypy>=1.10",
  "ruff>=0.6",          # linter/formatter
  "hypothesis>=6.110",  # property-based tests
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torch = [
  { index="pytorch-cu118" },
  ]

torchvision = [
  { index = "pytorch-cu118" },
  ]

torchaudio = [
{ index = "pytorch-cu118" },
]

[tool.hatch.build.targets.wheel]
packages = ["src/aigenintern_2025_2_1"]

[tool.hatch.metadata]
allow-direct-references = true
